lang/lc/tests/err_redef_attr.sys
attribute bool probability;

attribute float cost;
attribute float cost;
